<resources>
    <string name="app_name">Read4me</string>
    <string name="title_activity_main">Read4me</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_local_library">Local Library</string>
    <string name="title_read">Read</string>
    <string name="title_online_library">Online Library</string>
    <string name="hello_blank_fragment">Hello World!</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="nav_home">Home</string>
    <string name="nav_local_lib">Local Library</string>
    <string name="nav_online_lib">Online Library</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_help">Help</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="tv_sign_in_email">Connect to Read4me</string>
    <string name="tv_sign_in_others">or connect using</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">415454825503896</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb415454825503896</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">rpp8KGe8NWIsOqNFeho6YcbBk</string>
    <string name="twitter_consumer_secret" translatable="false">rpp8KGe8NWIsOqNFeho6YcbBk</string>

    <string name="action_settings">Settings</string>

    <!-- USER MESSAGES -->
    <string name="sign_in_cancel">Sign in canceled</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Input hints -->
    <string name="hint_title">Title of the book</string>
    <string name="hint_author">Author of the book</string>
    <string name="hint_lang">Language of output</string>
    <string name="hint_image_url">Book Image Url</string>

    <!-- TextView Content -->
    <string name="tv_new_book">Book Settings</string>

    <!-- Button Content -->
    <string name="btn_new_book">Add Book</string>
    <!--More -->
    <string name="btn_book_item_options">Options</string>
    <string name="im_book_item_desc">Options</string>
    <string name="tv_live_pick_book">Please pick a book from the library!</string>
    <string name="im_btn_control_no_page_loaded">No Pages are loaded!</string>
    <string name="im_btn_control_no_more_pages_loaded">No More Page are loaded</string>
    <string name="btn_assistant">Read4me assistant</string>

</resources>
