<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_blue_grey_700_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_local_lib"
            android:icon="@drawable/local_lib"
            android:title="@string/nav_local_lib" />
        <item
            android:id="@+id/nav_online_lib"
            android:icon="@drawable/ic_cloud_blue_grey_700_24dp"
            android:title="@string/nav_online_lib" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/nav_sign_out" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us" />
    </group>

</menu>
