<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="wrap_content">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_local_lib"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_local_lib" />
        <item
            android:id="@+id/nav_online_lib"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_online_lib" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_help" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>