<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aloui.tarek.read4me.Activities.NewBookActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"
        android:text="@string/tv_new_book"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_new_book_title"
                android:layout_width="@dimen/tv_input_width"
                android:layout_height="@dimen/tv_input_height"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_title"/>

            <EditText
                android:id="@+id/et_new_book_author"
                android:layout_width="@dimen/tv_input_width"
                android:layout_height="@dimen/tv_input_height"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_author"/>

            <EditText
                android:id="@+id/et_new_book_lang"
                android:layout_width="@dimen/tv_input_width"
                android:layout_height="@dimen/tv_input_height"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_lang"/>

            <EditText
                android:id="@+id/et_new_book_image_url"
                android:layout_width="@dimen/tv_input_width"
                android:layout_height="@dimen/tv_input_height"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hint_image_url"/>
            <Button
                android:id="@+id/btn_new_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/btn_new_book"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
