<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.aloui.tarek.read4me.MainActivity">


    <ImageView
        android:id="@+id/sign_in_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_white"
        android:layout_margin="@dimen/margin_padding_size_small"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_in_logo">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sign_in_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:text="@string/tv_sign_in_email"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryText"/>
            <EditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/et_email"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:elevation="@dimen/mds_elevation_raised_button_resting"/>
            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/et_password"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginBottom="@dimen/margin_padding_size_small"
                android:elevation="@dimen/mds_elevation_raised_button_resting"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/b_sign_in"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_sign_in"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:elevation="@dimen/mds_elevation_raised_button_resting" />
            <Button
                android:id="@+id/b_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_sign_up"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorPrimaryText"
                style="?android:attr/borderlessButtonStyle"
                />
            <TextView
                android:id="@+id/sign_in_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:text="@string/tv_sign_in_others"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorSecondaryText"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:background="@null"
                    android:src="@drawable/facebook"
                    android:layout_marginRight="@dimen/margin_padding_size_large"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:background="@null"
                    android:src="@drawable/google" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
